fix front page hero & content spacing

--- a/src/scss/layout/templates/_page.scss
+++ b/src/scss/layout/templates/_page.scss
@@ -42,8 +42,10 @@
       }
     }
 
-    .hero {
-      margin-bottom: $koros-size;
+    &:not(.home) {
+      .hero {
+        margin-bottom: $koros-size;
+      }
     }
 
   }
